--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <externalAnnotator language="PYTHON" id="pycharm-bandit" implementationClass="bandit.BanditExternalAnnotator" />
         <projectService serviceImplementation="bandit.ProjectService" />
+        <projectConfigurable groupId="tools" instance="bandit.BanditConfigurationPanel"/>
     </extensions>
 
     <actions>
