Resolve import issues and get a working annotator

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version '2019.3.1'
-    alternativeIdePath '/Users/anthonyshaw/Library/Application Support/JetBrains/Toolbox/apps/PyCharm-P/ch-0/193.6015.10/PyCharm 2019.3 EAP.app'
-    type 'PC'
+    type 'PY'
+    plugins 'python'
 }
 
 patchPluginXml {
