--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,7 +16,7 @@
         <projectConfigurable groupId="tools" instance="bandit.BanditConfigurationPanel"/>
     </extensions>
     <extensions defaultExtensionNs="Pythonid">
-        <pyAnnotator implementation="bandit.ExamplePyAnnotator"/>
+        <pyAnnotator implementation="bandit.validators.PyyamlLoadPyAnnotator"/>
     </extensions>
     <actions>
         <!-- Add your actions here -->
