--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.intellij' version '0.4.15'
 }
 
-group 'org.tonybaloney.bandit'
+group 'org.tonybaloney.security'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
