--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,16 @@
 <idea-plugin>
-    <id>org.tonybaloney.bandit.pycharm-bandit</id>
+    <id>org.tonybaloney.security.pycharm-security</id>
     <name>Python Security</name>
     <vendor email="anthonyshaw@apache.org" url="http://tonybaloney.github.io">Anthony Shaw</vendor>
 
     <description><![CDATA[
-    Runs Bandit rules in your Python editor. Designed to find common security issues in Python code.<br>
+    Analyzes potential security flaws in your Python code and suggests fixes. Designed to find common security issues in Python code.<br>
+
+    <h2>Current checks and fixes</h2>
+    <ul>
+     <li>Use of <pre>yaml.load()</pre> can cause execution of arbitrary code</li>
+     <li>Use of <pre>debug=True</pre> when instantiating flask applications</li>
+    </ul>
     ]]></description>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
@@ -12,11 +18,12 @@
     <depends>com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <projectService serviceImplementation="bandit.ProjectService" />
-        <projectConfigurable groupId="tools" instance="bandit.BanditConfigurationPanel"/>
+        <projectService serviceImplementation="security.ProjectService" />
+<!--        <projectConfigurable groupId="tools" instance="security.ConfigurationPanel"/>-->
     </extensions>
     <extensions defaultExtensionNs="Pythonid">
-        <pyAnnotator implementation="bandit.validators.PyyamlLoadPyAnnotator"/>
+        <pyAnnotator implementation="security.validators.PyyamlLoadPyAnnotator"/>
+        <pyAnnotator implementation="security.validators.FlaskDebugModeAnnotator"/>
     </extensions>
     <actions>
         <!-- Add your actions here -->
