--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.15'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'org.tonybaloney.security'
@@ -14,6 +15,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
