--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,7 +12,7 @@
      <li>Use of remote code execution when instantiating flask applications</li>
      <li>Use of MITM exposure when making HTTP requests with requests or httpx</li>
      <li>Bypassing of temporary file creation to inject content</li>
-     <li>Shell injection</li>
+     <li>Insecure configuration of Django debug mode</li>
     </ul>
     ]]></description>
 
@@ -30,6 +30,8 @@
         <pyAnnotator implementation="security.validators.HttpxNoVerifyValidator"/>
         <pyAnnotator implementation="security.validators.SubprocessCallShellModeValidator"/>
         <pyAnnotator implementation="security.validators.TempfileMktempValidator"/>
+        <pyAnnotator implementation="security.validators.DjangoDebugModeSettingsValidator"/>
+
     </extensions>
     <actions>
         <!-- Add your actions here -->
