Add some tests and execute them

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,6 @@ jobs:
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: build -PintellijPublishToken=FAKE_TOKEN
+    - uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: test -PintellijPublishToken=FAKE_TOKEN
