--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
