--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
+test {
+    useJUnitPlatform()
+    dependsOn 'cleanTest'
+}
+
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version '2019.3.1'
