--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         java-version: 11
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: build -PintellijPublishToken=FAKE_TOKEN
+        arguments: build -PintellijPublishToken=FAKE_TOKEN --info
     - uses: eskatos/gradle-command-action@v1
       with:
-        arguments: test -PintellijPublishToken=FAKE_TOKEN
+        arguments: test -PintellijPublishToken=FAKE_TOKEN --info
