--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.0.5'
+version '1.0.6'
 
 repositories {
     mavenCentral()
@@ -31,9 +31,9 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.0.5</h2>
+      <h2>1.0.6</h2>
       <ul>
-        <li>Package checker works with PEP440 version ranges</li>
+        <li>Fixed error when checking incomplete statements</li>
       </ul>"""
 }
 
