--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.15'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'jacoco'
 }
 
 group 'org.tonybaloney.security'
@@ -40,4 +41,12 @@ patchPluginXml {
 
 publishPlugin {
     token intellijPublishToken
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+        csv.enabled false
+    }
 }
