--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,7 +35,7 @@
         <pyAnnotator implementation="security.validators.SubprocessCallShellModeValidator"/>
         <pyAnnotator implementation="security.validators.TempfileMktempValidator"/>
         <pyAnnotator implementation="security.validators.DjangoDebugModeSettingsValidator"/>
-
+        <pyAnnotator implementation="security.validators.InsecureHashValidator"/>
     </extensions>
     <actions>
         <action id="Security.CheckSafetyDB" class="security.packaging.SafetyDbCheckerAction" text="Check Python Package Security" description="Check the installed Python packages for any known vulnerabilities." >
