--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,6 +11,7 @@
 
     <h2>Current checks and fixes</h2>
     <ul>
+     <li>Cryptographically weak algorithms for hashing</li>
      <li>Use of unsafe loading of YAML files</li>
      <li>Use of remote code execution when instantiating flask applications</li>
      <li>Use of MITM exposure when making HTTP requests with requests or httpx</li>
