--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,6 +37,8 @@
         <pyAnnotator implementation="security.validators.TempfileMktempValidator"/>
         <pyAnnotator implementation="security.validators.DjangoDebugModeSettingsValidator"/>
         <pyAnnotator implementation="security.validators.InsecureHashValidator"/>
+        <pyAnnotator implementation="security.validators.TimingAttackValidator"/>
+
     </extensions>
     <actions>
         <action id="Security.CheckSafetyDB" class="security.packaging.SafetyDbCheckerAction" text="Check Python Package Security" description="Check the installed Python packages for any known vulnerabilities." >
