Update Readme and checks help

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.0.9'
+version '1.0.10'
 
 repositories {
     mavenCentral()
@@ -33,13 +33,9 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.0.9</h2>
+      <h2>1.0.10</h2>
       <ul>
-        <li>Added a documentation action to all recommendations</li>
-        <li>Added a timing attack fixer for using hmac.compare_digest</li>
-        <li>Added a timing attack test for comparing a password string</li>
-        <li>Added hashlib test for cryptographically weak algorithm usage</li>
-        <li>Added hashlib check for algorithms vulnerable to length-attacks</li>
+        <li>Made the compare_digest module use secrets if available</li>
       </ul>"""
 }
 
