Move the existing code into a "shared" project. Create two plugins, community and professional. Community is a wrapper of the shared project, Professional can use PyCharm Pro APIs

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-rootProject.name = 'pycharm-security'
+rootProject.name = 'pycharm-security';
+include 'shared'
+include 'community'
+include 'professional'
