--- a/build.gradle
+++ b/build.gradle
@@ -1,53 +1,9 @@
-plugins {
-    id 'java'
-    id 'org.jetbrains.intellij' version '0.4.15'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id 'jacoco'
-}
-
 group 'org.tonybaloney.security'
 version '1.0.12'
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
-}
-
-test {
-    useJUnitPlatform()
-    dependsOn 'cleanTest'
-}
-
-// See https://github.com/JetBrains/gradle-intellij-plugin/
-intellij {
-    version 'PC-2019.3.1'
-    type 'PC'
-    plugins 'python-ce', 'yaml'
-}
-
-patchPluginXml {
-    changeNotes """
-      <h2>1.0.12</h2>
-      <ul>
-        <li>Added a quick-fix for escaping shell input</li>
-        <li>More scenarios for shell injection detection</li>
-      </ul>"""
-}
-
-publishPlugin {
-    token intellijPublishToken
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled false
-        csv.enabled false
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
     }
 }
