--- a/professional/src/main/resources/META-INF/plugin.xml
+++ b/professional/src/main/resources/META-INF/plugin.xml
@@ -29,8 +29,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <backgroundPostStartupActivity implementation="security.packaging.PythonPackageVulnerabilityStartupTask"/>
 
-        <localInspection language="DjangoTemplate" shortName="DjangoCsrfInspection" bundle="com.jetbrains.django.ui.Django"
-                         enabledByDefault="true" level="WARNING" displayName="CSRF Inspection" groupName="security"
+        <localInspection language="DjangoTemplate" shortName="DjangoCsrfInspection"
+                         enabledByDefault="true" level="WARNING" displayName="CSRF inspection" groupName="Security"
                          implementationClass="validators.DjangoViewCsrfValidator"/>
     </extensions>
     <extensions defaultExtensionNs="Pythonid">
@@ -44,8 +44,6 @@
         <pyAnnotator implementation="security.validators.InsecureHashValidator"/>
         <pyAnnotator implementation="security.validators.TimingAttackValidator"/>
         <pyAnnotator implementation="security.validators.DjangoMiddlewareValidator"/>
-
-
     </extensions>
     <actions>
         <action id="Security.CheckSafetyDB" class="security.packaging.SafetyDbCheckerAction" text="Check Python Package Security" description="Check the installed Python packages for any known vulnerabilities." >
