--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.0.13'
+version '1.0.14'
 
 repositories {
     mavenCentral()
@@ -33,12 +33,10 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.0.13</h2>
+      <h2>1.0.14</h2>
       <ul>
-        <li>Added Django CSRF Middleware Validator </li>
-        <li>Added Django Clickjack Middleware Validator </li>
-        <li>Added Django Middleware Fixer </li>
-        <li>Fixed bug where function references would be unsafely cast to a PyReferenceExpression and cause a fault </li>
+        <li>All checks are now local inspections, so within the Code Inspection tool, they will show as "Python Security"</li>
+        <li>Users can now alter the severity of any particular check and mute for a given project, file or IDE</li>
       </ul>"""
 }
 
