--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -47,6 +47,7 @@
         <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" level="WEAK WARNING" displayName="AST100: Use of asserts in non-test files" shortName="AssertInspection" implementationClass="security.validators.AssertInspection" />
         <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" level="WEAK WARNING" displayName="TRY100: Except block only containing a pass statement" shortName="TryExceptPassInspection" implementationClass="security.validators.TryExceptPassInspection" />
         <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" level="WEAK WARNING" displayName="TRY101: Except block only containing a continue statement" shortName="TryExceptContinueInspection" implementationClass="security.validators.TryExceptContinueInspection" />
+        <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" displayName="PAR100: Paramiko set to automatically trust the host key" shortName="ParamikoHostkeyBypassInspection" implementationClass="security.validators.ParamikoHostkeyBypassInspection" />
 
     </extensions>
     <extensions defaultExtensionNs="Pythonid">
