--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -49,6 +49,7 @@
         <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" level="WEAK WARNING" displayName="TRY101: Except block only containing a continue statement" shortName="TryExceptContinueInspection" implementationClass="security.validators.TryExceptContinueInspection" />
         <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" displayName="PAR100: Paramiko set to automatically trust the host key" shortName="ParamikoHostkeyBypassInspection" implementationClass="security.validators.ParamikoHostkeyBypassInspection" />
         <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" level="WEAK WARNING" displayName="NET100: Possible service binding to all network interfaces" shortName="BindAllInterfacesInspection" implementationClass="security.validators.BindAllInterfacesInspection" />
+        <localInspection language="Python" enabledByDefault="true" groupName="Python Security" hasStaticDescription="true" displayName="OS100: Call to os.chmod setting permission values" shortName="OsChmodInspection" implementationClass="security.validators.OsChmodInspection" />
 
     </extensions>
     <extensions defaultExtensionNs="Pythonid">
