--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.2.0'
+version '1.3.0'
 
 repositories {
     mavenCentral()
@@ -36,11 +36,14 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.2.0</h2>
-      <h3>New Features</h3>
+      <h2>1.3.0</h2>
       <ul>
-        <li>Checks for potential SQL injection with Python formatting expressions</li>
-        <li>Support for PyCharm 2020.1</li>
+        <li>Added TRY100 check for try..except..pass statements</li>
+<li>Added TRY101 check for try..except..continue statements</li>
+<li>Added AST100 check for assert usage outside of a test</li>
+<li>Added NET100 check unspecified binding </li>
+<li>Added PAR100 check for host key bypass in paramiko ssh client usage</li>
+<li>Added OS100 check calls to `os.chmod()` for dangerous POSIX permissions</li>
       </ul>
       """
 }
