--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.4.0'
+version '1.4.1'
 
 repositories {
     mavenCentral()
@@ -36,9 +36,10 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.4.0</h2>
+      <h2>1.4.1</h2>
       <ul>
-        <li>Added DJG101 : Using quoted, parametrized literal will bypass Django SQL Injection protection</li>
+        <li>Changed YML100 to not match when `loader=SafeLoader` is used</li>
+        <li>Altered PW100 to only match on == and != operators, reducing false positives</li>
       </ul>
       """
 }
