Update release data

--- a/.github/actions/Dockerfile
+++ b/.github/actions/Dockerfile
@@ -1,3 +1,3 @@
-FROM anthonypjshaw/pycharm-security
+FROM docker.pkg.github.com/tonybaloney/pycharm-security/pycharm-security:1.4.1
 COPY action.sh /action.sh
 ENTRYPOINT ["/action.sh"]
