--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'org.tonybaloney.security'
-version '1.4.1'
+version '1.4.2'
 
 repositories {
     mavenCentral()
@@ -36,10 +36,9 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      <h2>1.4.1</h2>
+      <h2>1.4.2</h2>
       <ul>
-        <li>Changed YML100 to not match when `loader=SafeLoader` is used</li>
-        <li>Altered PW100 to only match on == and != operators, reducing false positives</li>
+        <li>Fixed a bug where packages that had a vulnerability in safetydb but no CVE record would raise a NPE to PyCharm</li>
       </ul>
       """
 }
