--- a/.github/actions/Dockerfile
+++ b/.github/actions/Dockerfile
@@ -1,3 +1,5 @@
-FROM docker.pkg.github.com/tonybaloney/pycharm-security/pycharm-security:1.4.1
+FROM docker.pkg.github.com/tonybaloney/pycharm-security/pycharm-security:1.4.2
 COPY action.sh /action.sh
+RUN ["chmod", "+x", "/action.sh"]
 ENTRYPOINT ["/action.sh"]
+COPY . /code
